# electricSheepParty

./: .gitignore  README.md  getIPs.py  install-opencv.sh  putilov
CCCP/: CCCP.go  README.md  camera.go  frontend.go  ips.txt  pathfinder.go  sheepCom.go  utils.go
CCCP/frontendbuild/: index.html
CPU/: pathfinder.go  udprcv.py  udpsend.py
bots/: .gdbinit  CMakeLists.txt  Makefile  customconfig  customconfig.h  sdkconfig
bots/components/adc/: adc.c
bots/components/adc/include/: adc.h
bots/components/i2c/: i2c.c
bots/components/i2c/include/: i2c.h
bots/components/motor/: motor.c
bots/components/motor/include/: motor.h
bots/components/ota/: ota.c
bots/components/ota/include/: ota.h
bots/components/turret/: turret.c
bots/components/turret/include/: turret.h
bots/components/wifi/: wifi.c
bots/components/wifi/include/: wifi.h
bots/main/: .udp.h.swp  component.mk  udp.c  udp.h
bottracking/: CMakeLists.txt  track.cpp
bottracking/libs/: CMakeLists.txt  addBlobMem.cpp  addBlobMem.h  addID.cpp  addID.h  addToBlob.cpp  addToBlob.h  blistToBytes.cpp  blistToBytes.h  blob.h  displayBlobs.cpp  displayBlobs.h  filterBlist.cpp  filterBlist.h  findBlobs.cpp  findBlobs.h  freeBlobs.cpp  freeBlobs.h  freeHist.cpp  freeHist.h  genlut.cpp  genlut.h  getOrient.cpp  getOrient.h  printBlobs.cpp  printBlobs.h  socketClient.cpp  socketClient.h  wantPx.cpp  wantPx.h
bottracking/python/: bottrack.py  sockettest.py
lib/: sheep.l#1  sheep.l#2  sheep.l#3  sheep.lbr
mech/Camera Holder/: Camera holder v5.step
mech/asm/: Backup (1) of mechOverview.SLDASM  Backup (2) of mechOverview.SLDASM  Backup (3) of mechOverview.SLDASM  master.SLDASM  mechOverview.SLDASM
mech/body/: Base 2.0 v7.step
mech/camera/: Camera Standoff v2.STL  Camera Standoff v2.step  Camera holder top v2.SLDPRT  Camera holder top v2.STL  Camera holder top v2.step  Camera holder v5.SLDPRT  (+18 more)
oldfiles/: scan.c
pcb/: bmp.scr  eagle.epf  main.b##  main.b#1  main.b#2  main.b#3  main.b#4  main.b#5  main.b#6  main.b#7  main.b#8  main.b#9  main.brd  main.gpi  main.s##  main.s#1  main.s#2  main.s#3  main.s#4  main.s#5  main.s#6  main.s#7  main.s#8  main.s#9  main.sch  main.stc
workingunity/: ElectricFrontEnd.csproj  ElectricFrontEnd.sln  ElectricFrontEnd.userprefs  navmeshagent.docx  workingunity.csproj  workingunity.sln
(+489 files in other folders)
