cmake_minimum_required(VERSION 2.8)
project( tracking )
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
include_directories ("${PROJECT_SOURCE_DIR}/libs")
add_subdirectory (libs) 
add_executable( run.a track.cpp)
target_link_libraries( run.a ${OpenCV_LIBS})
target_link_libraries( run.a libs)
